--- a/src/main/resources/mensajes.properties
+++ b/src/main/resources/mensajes.properties
@@ -1,3 +1,3 @@
 texto.indexcontroller.index.titulo: Hola Spring Framework!! con model desde properties
 texto.indexcontroller.perfil.titulo: Perfil de:
-texto.indexcontroller.listar.titulo: Listado de usuarios
+texto.indexcontroller.listar.titulo: Listado de usuarios desde mensaje properties
